--- a/p5/sketches/games/brick breaker/index.html
+++ b/p5/sketches/games/brick breaker/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js example</title>
+    <title>Brick Breaker</title>
     <style> body {padding: 0; margin: 0; background-color:white;} </style>
     <script src="../../../libraries/p5.min.js"></script>
     <script src="../../../libraries/addons/p5.dom.min.js"></script>
