--- a/p5/sketches/roman numerals/index.html
+++ b/p5/sketches/roman numerals/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js example</title>
-    <style> body {padding: 0; margin: 0; background-color:black;} </style>
-    <script src="../p5.min.js"></script>
-    <script src="../addons/p5.dom.min.js"></script>
-    <script src="../addons/p5.sound.min.js"></script>
+    <title>Roman Numerals</title>
+    <style> body {padding: 0; margin: 0; background-color:white;} </style>
     <script src="sketch.js"></script>
   </head>
   <body>
