--- a/classwork/examples/3,1,8.html
+++ b/classwork/examples/3,1,8.html
@@ -18,6 +18,7 @@
 					"tails": 1,
 					"friends": ["everything!"]
 				};
+				console.log(myDog);
 				//problem2
 				// Setup
 				var testObj = {
@@ -30,6 +31,7 @@
 
 					var hatValue = testObj["hat"];      // Change this line
 					var shirtValue = testObj["shirt"];    // Change this line
+				console.log(testObj);
 				//problem3
 				var meal = {
 					"an entree": "hamburger",
@@ -41,6 +43,8 @@
 
 				var entreeValue =  meal["an entree"];   // Change this line
 				var drinkValue = meal["the drink"];    // Change this line
+				console.log(entreeValue);
+				console.log(drinkValue);
 				//problem4
 				// Setup
 				var playerNames = {
