--- a/classwork/examples/3,1,8.html
+++ b/classwork/examples/3,1,8.html
@@ -58,6 +58,7 @@
 				var playerNumber = 16;       // Change this Line
 				var player = playerNames[playerNumber];   // Change this Line
 				console.log(player)
+				//problem5
 				
 		</script>
 	</body>
