--- a/p5/sketches/games/brick breaker/index.html
+++ b/p5/sketches/games/brick breaker/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brick Breaker</title>
-    <style> body {padding: 0; margin: 0; background-color:white;} </style>
+    <style> body {padding: 0; margin: 0; background-color:white; display: flex; justify-content: center;} </style>
     <script src="../../../libraries/p5.min.js"></script>
     <script src="../../../libraries/addons/p5.dom.min.js"></script>
+    <script src="../../../libraries/addons/p5.dom.js"></script>
     <script src="../../../libraries/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
 	<script src="paddle.js"></script>
